allow passing description+extra to batch endpoints
Pretty messy, but I needed some way to do this.

In particular, requires json.dumps() in python code, for now. Blech.

--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -706,6 +706,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
@@ -964,6 +972,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
@@ -1245,6 +1261,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
@@ -1508,6 +1532,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
@@ -1737,6 +1769,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
@@ -1966,6 +2006,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
@@ -2318,6 +2366,14 @@ paths:
           type: string
           required: false
           description: "Editgroup to auto-accept and apply to all entities (required if 'autoaccept' is True)"
+        - name: description
+          in: query
+          type: string
+          required: false
+        - name: extra
+          in: query
+          type: string
+          required: false
         - name: entity_list
           in: body
           required: true
