get regular log lines flowing through slog
The plan here is to replace slog with env_logger (much simpler!), but
not there yet.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,7 +16,7 @@ diesel_migrations = "1.3"
 dotenv = "0.9.0"
 clap = "2"
 uuid = "0.6"
-log = "*"
+log = { version = "*", features = ["max_level_info", "release_max_level_info"] }
 data-encoding = "2.1"
 regex = "1"
 lazy_static = "1.0"
@@ -36,6 +36,8 @@ swagger = "0.7"
 slog = "^2.0"
 slog-term = "*"
 slog-async = "*"
+slog-stdlog = "*"
+slog-scope = "*"
 serde_json = "1.0"
 serde = "*"
 serde_derive = "1.0"
