--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -39,7 +39,7 @@ slog-async = "*"
 slog-stdlog = "*"
 slog-scope = "*"
 serde_json = "1.0"
-serde = "*"
+serde = "1.0"
 serde_derive = "1.0"
 serde_ignored = "0.0.4"
 sentry = { version = "^0.12", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_failure"] }
