CI pylint wants specific files, I guess
To fix:

    error while code parsing: Unable to load file tests/__init__.py"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ unified_test:
     - pipenv run pytest --cov
     - pipenv run ./tests/cli.sh
     # Just errors
-    - pipenv run pylint -E fatcat*.py fatcat_tools fatcat_web tests
+    - pipenv run pylint -E fatcat*.py fatcat_tools fatcat_web tests/*.py
 
 rust_build_release:
   only:
