citeproc-py dep
The style package has 40+ MByte of style info (thousands of files),
which is unforunately large.

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -33,6 +33,8 @@ sickle = "*"
 python-snappy = "*"
 pymacaroons = "*"
 ftfy= "*"
+citeproc-py = "*"
+citeproc-py-styles = "*"
 
 [requires]
 # Python 3.5 is the bundled (system) version of python for Ubuntu 16.04
