--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ unified_test:
   script:
     - rustc --version && cargo --version && diesel --version
     - cd rust
-    - cp env.example .env
+    - cp example.env .env
     - diesel database reset && diesel migration run
     - cargo build
     - cargo test -- --test-threads 1
@@ -28,7 +28,7 @@ unified_test:
     - cd ../python_client
     - pytest-3
     - cd ../python
-    - cp env.example .env
+    - cp example.env .env
     - pipenv install --dev --deploy
     - pipenv run pytest --cov
     - pipenv run ./tests/cli.sh
