markdown rendering of comments/annotations

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -25,6 +25,7 @@ flask-uuid = "*"
 flask-debugtoolbar = "*"
 flask-login = "*"
 flask-wtf = "*"
+Flask-Misaka = "*"
 WTForms = "*"
 loginpass = "*"
 requests = ">=2"
