--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -1,10 +1,12 @@
-
 [pytest]
 
 ignore = setup.py
 
-# allow imports from files in current directory
 python_paths = .
 
 # search for 'test_*' functions in all python files, not just under tests
 python_files = *.py
+
+addopts = --pylint --pylint-rcfile=.pylintrc --pylint-error-types=EF --pylint-jobs=4
+
+filterwarnings = ignore:.*common_exception_handling.*StopIteration:PendingDeprecationWarning
