squelch another dep warning

--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -9,4 +9,7 @@ python_files = *.py
 
 addopts = --pylint --pylint-rcfile=.pylintrc --pylint-error-types=EF --pylint-jobs=4
 
-filterwarnings = ignore:.*common_exception_handling.*StopIteration:PendingDeprecationWarning
+# these are internal to raven (sentry client) and misaka (Markdown client)
+filterwarnings =
+    ignore:.*common_exception_handling.*StopIteration:PendingDeprecationWarning
+    ignore:passing extensions and flags as constants is deprecated:DeprecationWarning
