default to showing INFO log lines for failed tests

--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -13,3 +13,5 @@ addopts = --pylint --pylint-rcfile=.pylintrc --pylint-error-types=EF --pylint-jo
 filterwarnings =
     ignore:.*common_exception_handling.*StopIteration:PendingDeprecationWarning
     ignore:passing extensions and flags as constants is deprecated:DeprecationWarning
+
+log_level = INFO
