work around pylint/responses error
Known problem with reponses and dynamic functions. See also:
https://github.com/getsentry/responses/issues/74

--- a/python/.pylintrc
+++ b/python/.pylintrc
@@ -9,3 +9,6 @@ include-ids=yes
 [MISCELLANEOUS]
 # List of note tags to take in consideration, separated by a comma.
 notes=FIXME,XXX,DELETEME
+
+[TYPECHECK]
+ignored-modules=responses
