--- a/python/Pipfile
+++ b/python/Pipfile
@@ -32,6 +32,7 @@ loginpass = {ref = 'ed9e527502bd19be6793f88ed71ca0e1764e9034',git = 'https://git
 requests = ">=2"
 raven = {extras = ['flask'],version = "*"}
 pykafka = ">=2"
+confluent-kafka = "*"
 python-dateutil = "*"
 sickle = "*"
 python-snappy = "*"
