--- a/extra/docker/docker-compose.yml
+++ b/extra/docker/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     ports:
       - "2181:2181"
   kafka:
-    #image: wurstmeister/kafka:2.11-2.0.0
-    image: wurstmeister/kafka:2.11-1.1.1
+    image: wurstmeister/kafka:2.11-2.0.0
     ports:
       - "9092:9092"
     environment:
@@ -14,7 +13,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "fatcat-qa.changelog:1:1,fatcat-qa.release-updates:3:1:compact"
+      KAFKA_CREATE_TOPICS: "fatcat-dev.changelog:1:1,fatcat-dev.release-updates:3:1:compact"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   elasticsearch:
