flask-mwoauth for Wikipedia OAuth logins

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -27,6 +27,7 @@ flask-debugtoolbar = "*"
 flask-login = "*"
 flask-wtf = "*"
 Flask-Misaka = "*"
+flask-mwoauth = "*"
 WTForms = "*"
 loginpass = "*"
 requests = ">=2"
