--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,9 @@ rust_build_release:
   image: "rust:1.32-stretch"
   variables:
     LC_ALL: "C.UTF-8"
+  before_script:
+    - apt update -qy
+    - apt install -y python3-dev python3-pip python3-wheel python3-requests python3-six python3-pytest libsnappy-dev libsodium-dev
     LANG: "C.UTF-8"
   script:
     - rustc --version && cargo --version
