--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,7 +11,7 @@ members = ["fatcat-api-spec"]
 
 [dependencies]
 fatcat-api-spec = {version = "*", path = "fatcat-api-spec", features = ["server"] }
-diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
+diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2", "64-column-tables"] }
 diesel_migrations = "1.3"
 dotenv = "0.9.0"
 clap = "2"
