codegen and rust impl created timestamp

--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -530,6 +530,9 @@ definitions:
         type: integer
         example: 1048576
         format: int64
+      created:
+        type: string
+        format: date-time
       submitted:
         type: string
         format: date-time
