--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
   LANG: "C.UTF-8"
   PIPENV_VENV_IN_PROJECT: "true"
   CARGO_HOME: ".cargo_cache"
+  PATH: "$PATH:$CARGO_HOME/bin"
 
 image: "rust:1.32-stretch"
 
