--- a/rust/fatcat-openapi/Cargo.toml
+++ b/rust/fatcat-openapi/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fatcat-api-spec"
+name = "fatcat-openapi"
 version = "0.3.0"
 authors = ["Bryan Newbold <bnewbold@archive.org>"]
 description = "HTTP API models, endpoints, and other auto-generated types"
