rename guide 'The Fatcat Guide'

--- a/guide/book.toml
+++ b/guide/book.toml
@@ -1,5 +1,5 @@
 [book]
-title = "Fatcat: The Guide"
+title = "The Fatcat Guide"
 authors = ["Fatcat Documentation Contributors"]
 multilingual = false
 src = "src"
